--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@phosphor-icons/react": "^2.1.3",
+    "embla-carousel": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
