--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.0",
     "@phosphor-icons/react": "^2.1.3",
+    "@studio-freight/react-lenis": "^0.0.47",
     "embla-carousel": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "gsap": "^3.12.5",
