--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.0.2",
     "gsap": "^3.12.5",
     "next": "14.1.4",
+    "polished": "^4.3.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3"
